// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Expense Summary correctly 1`] = `
<div>
  <h1>
    Viewing 3 
            expenses 
            totaling 115000
  </h1>
</div>
`;

exports[`Render Expense Summary with no expenses 1`] = `
<div>
  <h1>
    You have no expenses
  </h1>
</div>
`;

exports[`Render Expense Summary with one expense 1`] = `
<div>
  <h1>
    Viewing 1 
            expense 
            totaling 100000
  </h1>
</div>
`;
